[tool.poetry]
name = "ps5"
version = "0.1.0"
description = ""
authors = ["Zachary Weeden <zdw7287@rit.edu>"]

[tool.poetry.dependencies]
python = ">=3.6"
selenium = "^3.141.0"
argparse = "^1.4.0"
black = "^20.8b1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
